# FurnitureAI

./: .gitignore  Furniture.cabal  LICENSE
src/: Creation.hs  Example.hs  Main.hs  Model.hs
