name:                Furniture
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ilan Godik
maintainer:          ilan3580@gmail.com
category:            AI

build-type:          Simple
cabal-version:       >=1.10


executable Furniture
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       Model

  ghc-options:         -O2

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <=4.8, containers >=0.5 && <0.6, monoid-extras, nats, astar, ansi-terminal, array
  hs-source-dirs:      src
  default-language:    Haskell2010
